@@ -1,6 +1,11 @@
 SVN
 -------------------------------
 
+XML:   Resolved issue CASTOR-1925 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
+       Fixed syntax of closing <forces> tag in JClassRegistry.printSummary().
+       Details: http://jira.codehaus.org/browse/CASTOR-1925
+       (Werner - 20070330)
+
 XML:   Resolved issue CASTOR-1891 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
        Fixed problem with using enum types as constructor arguments
        Details: http://jira.codehaus.org/browse/CASTOR-1891
